Fri Apr 21 11:25:24 PDT 2000 Manish Singh <yosh@gimp.org>

	* libgimp/Makefile.am: gimpsignal.[ch] needs to go into libgimp,
	since it is used in gimp.c

	* libgimp/gimpsignal.c: use g_error instead of gimp_fatal_error

	* plug-ins/common/png.c: typo fix for Nick's previous commit

2000-04-21  Nick Lamb  <njl195@zepler.org.uk>

	* plug-ins/common/png.c: Fix #9380 as K&R intended :)
	Fixed for Sven and Felix, but loads partial or damaged images.
	No more warnings either.

2000-04-21 Garry R. Osgood <gosgood@idt.net>

	* app/main.c
	* libgimp/Makefile.am
	* libgimp/gimp.c
	* libgimp/gimpsignal.c (New )
	* libgimp/gimpsignal.h (New )
	Patch by Austin Donnelly <austin@gimp.org> to address #2742. (I took
	the liberty of moving it to libgimp for general consumption, & fixed a
	typo) SYS5R4 unix's were failing when signals arrived at processes in
	system calls, a behavior in accordance with POSIX specs. Patch
	introduces a gimp_signal_private() workalike replacement for
	signal(2), layered over sigaction(2) which internally requests the
	signal environment to restart system calls instead of failing. This is
	POSIX spec 1170 extension behavior, but one that appears to be generally
	supported. Thanks due to Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>
	for testing this on various flavors of OSF/1 boxes where #2742 seemed
	especially common.

2000-04-20  Nick Lamb  <njl195@zepler.org.uk>

	* plug-ins/common/png.c: Revert Sven's changes, I am
 	not that silly Sven, read the code more carefully
 	and THINK about it.  We do not want to leak Gimp
 	Images.

2000-04-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/align_layers.c: applied patch provided by
	KANDA Toshihiro <candy@ops.dti.ne.jp>. Should fix bug #7329.

2000-04-20  Sven Neumann <sven@gimp.org>
	
	* plug-ins/common/bumpmap.c: correctly initialize the bumpmap 
	offsets

	* plug-ins/common/png.c: (load_image) if the PNG cannot be loaded, 
	return -1 instead of some uninitialized integer
